--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -1,7 +1,23 @@
+html {
+    font-size: clamp(20px, calc(1vw), 28px);
+}
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow-x: hidden;
+
+    background: black;
+    color: white;
+}
+
+header {
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 2rem;
 }
 
 header h1, header img{
@@ -9,8 +25,33 @@ header h1, header img{
     vertical-align: middle;
 }
 
+.text-anim-t {
+    animation-duration: 0.5s;
+    animation-delay: 0.5s;
+    animation-timing-function: cubic-bezier(.68,-0.55,.38,1.18);
+    animation-fill-mode: forwards;
+}
+
+header h1 {
+    font-size: 3em;
+    background: linear-gradient(
+        to left,
+        #000 0%,
+        #fff 50%
+    );
+    margin: 0;
+
+    color: #ff00;
+    background-clip: text;
+    background-position: -12em 0;
+    background-repeat: no-repeat;
+
+    animation-name: fade-left;
+}
+
 main {
     max-width: 600px;
+    margin: 0 40px;
 }
 
 section {
@@ -20,7 +61,13 @@ section {
 }
 
 #header-logo {
-    width: 100px;
+    width: 6em;
+    margin: 0;
+    margin-left: -2em;
+
+    transform: translateX(-10em);
+
+    animation-name: appear-left;
 }
 
 .person-info {
@@ -42,4 +89,55 @@ section {
 
 #fb-container {
     max-width: 450px;
+}
+
+@keyframes appear-left {
+    0% {
+        transform: translateX(-10em);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes fade-left {
+    0% {
+        background-position-x: -12em;
+    }
+
+    100% {
+        background-position-x: 0;
+    }
+}
+
+@media screen and (max-width: 730px) {
+    html {
+        font-size: 18px;
+    }
+
+    main {
+        margin: 0;
+    }
+    #main-header {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #main-header * {
+        animation-name: none;
+        transform: translate(0);
+        margin: 0;
+    }
+
+    #main-header img {
+        margin: -20px 0;
+    }
+
+    #main-header h1 {
+        color: white;
+        font-size: 2em;
+    }
 }
