--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -6,7 +6,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow-x: hidden;
 
-    background: black;
+    background: #111;
     color: white;
 }
 
@@ -36,7 +36,7 @@ header h1 {
     font-size: 3em;
     background: linear-gradient(
         to left,
-        #000 0%,
+        #111 0%,
         #fff 50%
     );
     margin: 0;
@@ -51,15 +51,12 @@ header h1 {
     animation-name: fade-left;
 }
 
-main {
-    max-width: 600px;
-    margin: 0 40px;
-}
-
 section {
-    margin-bottom: 30px;
     padding: 5px 10px;
     border-bottom: 1px solid gray;
+    max-width: 950px;
+    margin: 0 auto;
+    margin-top: 50px;
 }
 
 #header-logo {
