--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -10,6 +10,15 @@ body {
     color: white;
 }
 
+a {
+    color: rgb(240, 185, 44);
+    text-decoration: none;
+}
+
+a:visited {
+    color: rgb(240, 152, 44);
+}
+
 header {
     min-height: 500px;
     display: flex;
